<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".RegisterActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-34dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="791dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="192dp"
                android:layout_height="41dp"
                android:layout_marginEnd="91dp"
                android:layout_marginStart="91dp"
                android:layout_marginTop="52dp"
                android:text="@string/create_new_account"
                android:textAlignment="center"
                android:textColor="#6676E1"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/Name"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginEnd="42dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="53dp"
                android:ems="10"
                android:hint="@string/name"
                android:textCursorDrawable="@null"
                android:backgroundTint="#D8D8D8"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/Email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="43dp"
                android:layout_marginStart="44dp"
                android:layout_marginTop="19dp"
                android:ems="10"
                android:hint="@string/email"
                android:textCursorDrawable="@null"
                android:backgroundTint="#D8D8D8"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Name"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/Password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="43dp"
                android:layout_marginStart="44dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/password"
                android:textCursorDrawable="@null"
                android:backgroundTint="#D8D8D8"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Email"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/Re_enter_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="43dp"
                android:layout_marginStart="44dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/re_enter_password"
                android:textCursorDrawable="@null"
                android:backgroundTint="#D8D8D8"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Password"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/regitser"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_marginEnd="43dp"
                android:layout_marginStart="53dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/my_button"
                android:stateListAnimator="@null"
                android:text="@string/register"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Re_enter_password"
                tools:ignore="MissingConstraints" />

            <ProgressBar
                android:id="@+id/progressbar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="51dp"
                android:layout_height="47dp"
                android:layout_centerInParent="true"
                android:indeterminateDrawable="@drawable/progressbar"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.549"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/logo"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/login_in"
            android:layout_width="280dp"
            android:layout_height="41dp"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="73dp"
            android:layout_marginStart="68dp"
            android:text="@string/already_have_account_sign_in"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>