<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ProfileActivity">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="313dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/information_account"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="86dp"
                android:layout_height="25dp"
                android:layout_marginBottom="23dp"
                android:layout_marginEnd="140dp"
                android:layout_marginStart="137dp"
                android:layout_marginTop="66dp"
                android:text="@string/profile"
                android:textAlignment="center"
                android:textColor="#6676E1"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/circleImageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <View
                android:id="@+id/view2"
                android:layout_width="293dp"
                android:layout_height="1dp"
                android:layout_marginEnd="85dp"
                android:layout_marginStart="32dp"
                android:background="#BEBEBE"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:ignore="MissingConstraints" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageView"
                android:layout_width="0dp"
                android:layout_height="141dp"
                android:layout_marginEnd="101dp"
                android:layout_marginStart="101dp"
                android:layout_marginTop="23dp"
                android:background="@drawable/profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                tools:ignore="MissingConstraints">


            </de.hdodenhof.circleimageview.CircleImageView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="274dp"
            tools:layout_editor_absoluteX="1dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="19dp"
                android:text="@string/user_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/Name"
                android:layout_width="121dp"
                android:layout_height="23dp"
                android:layout_marginStart="116dp"
                android:layout_marginTop="4dp"
                android:text="yousef"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="51dp"
                android:layout_height="18dp"
                android:layout_marginEnd="33dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:text="@string/name"
                app:layout_constraintEnd_toStartOf="@+id/Name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/Email"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_marginStart="119dp"
                android:layout_marginTop="10dp"
                android:text="yousef@yousef.com"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Name"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="18dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/user_id"
                android:layout_width="176dp"
                android:layout_height="23dp"
                android:layout_marginStart="115dp"
                android:layout_marginTop="10dp"
                android:text="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Email"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="1dp"
        android:background="@drawable/logo"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/logout"
            android:layout_width="282dp"
            android:layout_height="34dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="39dp"
            android:text="@string/log_out"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>